src/snapshots/green_tea__parser__test__parse_for_loop_with_single_identifier.snap
---
source: src/parser.rs
expression: "Hello {% for item in list %}{{ item }}{% endfor %}"
---
[
    Text(
        "Hello ",
    ),
    For(
        "item",
        None,
        "list",
        [
            Identifier(
                "item",
            ),
        ],
    ),
]
