src/snapshots/green_tea__parser__test__parse_if_comparison.snap
---
source: src/parser.rs
expression: "Hello {% if items != [] %}Some items{% endif %}"
---
[
    Text(
        "Hello ",
    ),
    If(
        "items != []",
        [
            Text(
                "Some items",
            ),
        ],
        [],
    ),
]
