src/snapshots/green_tea__parser__test__parse_import.snap
---
source: src/parser.rs
expression: "{> import user.{User}\n{{ name }}"
---
[
    Import(
        "user.{User}",
    ),
    Identifier(
        "name",
    ),
]
