src/snapshots/green_tea__parser__test__parse_pure_text.snap
---
source: src/parser.rs
expression: "Hello name, good to meet you"
---
[
    Text(
        "Hello name, good to meet you",
    ),
]
